syntax = "proto3";

package v1;

option go_package = "github.com/garethgeorge/resticui/go/proto/v1";

import "v1/config.proto";
import "v1/restic.proto";
import "v1/operations.proto";
import "types/value.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service ResticUI {
  rpc GetConfig (google.protobuf.Empty) returns (Config) {
    option (google.api.http) = {
      get: "/v1/config"
    };
  }

  rpc SetConfig (Config) returns (Config) {
    option (google.api.http) = {
      post: "/v1/config"
      body: "*"
    };
  }

  rpc AddRepo (Repo) returns (Config) {
    option (google.api.http) = {
      post: "/v1/config/repo"
      body: "*"
    };
  }

  rpc GetOperationEvents (google.protobuf.Empty) returns (stream OperationEvent) {
    option (google.api.http) = {
      get: "/v1/events/operations"
    };
  }

  rpc GetOperations (GetOperationsRequest) returns (OperationList) {
    option (google.api.http) = {
      post: "/v1/operations"
      body: "*"
    };
  }

  rpc ListSnapshots(ListSnapshotsRequest) returns (ResticSnapshotList) {
    option (google.api.http) = {
      post: "/v1/snapshots"
      body: "*"
    };
  }

  // Backup schedules a backup operation. It accepts a plan id and returns empty if the task is enqueued.
  rpc Backup(types.StringValue) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/cmd/backup"
      body: "*"
    };
  }

  // PathAutocomplete provides path autocompletion options for a given filesystem path.
  rpc PathAutocomplete (types.StringValue) returns (types.StringList) {
    option (google.api.http) = {
      post: "/v1/autocomplete/path"
      body: "*"
    };
  }
}

message ListSnapshotsRequest {
  string repo_id = 1;
  string plan_id = 2;
}

message GetOperationsRequest {
  string repo_id = 1;
  string plan_id = 2;
  int64 last_n = 3; // limit to the last n operations
}
